--- a/src/pages/home/index.scss
+++ b/src/pages/home/index.scss
@@ -5,14 +5,21 @@
 
   .plan-list {
     width: 100%;
-    padding: 30px 6vw;
+    height: 10vh;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    padding: 0 6vw;
     background-color: #fff;
 
+    .plan {
+      width: 100%;
+    }
     .progress {
       height: 20px;
       overflow: hidden;
       background-color: #f5f5f5;
-      border-radius: 4px;
+      border-radius: 2px;
       box-shadow: inset 0 1px 2px rgba(0,0,0,.1);
       display: flex;
       justify-content: flex-start;
@@ -58,5 +65,70 @@
       font-weight: bold;
       color: $green;
     }
+  }
+
+  .bill-box {
+
+    .bill-title {
+      width: 100%;
+      display: flex;
+      justify-content: space-between;
+      color: #fff;
+      font-weight: bold;
+      font-size: rem(12);
+      line-height: 1em;
+      padding: 3vw;
+      border-bottom: 1px solid rgba($color: #f5f5f5, $alpha: 0.2);
+    }
+    .bill-list {
+      padding: 6vw;
+    }
+    .single-bill {
+      width: 100%;
+      height: 30px;
+      margin-bottom: 20px;
+      border-radius: 2px;
+      background-color: #fff;
+      position: relative;
+      padding: 0 15px 0 20px;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+
+      span.head {
+        position: absolute;
+        width: 24px;
+        height: 24px;
+        border-radius: 12px;
+        background-color: $green;
+        border: 1px solid rgba($color: #f5f5f5, $alpha: 0.5);
+        top: -10px;
+        left: -10px;
+      }
+
+      font-size: rem(13);
+      font-weight: bold;
+      color: $green;
+      letter-spacing: 1px;
+    }
+  }
+
+  .add {
+    width: 16vw;
+    height: 16vw;
+    border-radius: 8vw;
+    background-color: #fff;
+    position: fixed;
+    left: 42vw;
+    bottom: 20px;
+    padding: 10px;
+    background: {
+      color: #fff;
+      image: url('../../images/add.png');
+      size: 10vw;
+      position: center;
+      repeat: no-repeat;
+    }
+    box-shadow: 0px 14px 25px 0px rgba(0, 0, 0, 0.18);
   }
 }
